# SuperPong

./: .dockerignore  .env.example  .gitignore  README.md  Skill.md  index.html  metadata.json  package-lock.json  package.json  render.yaml  vite.config.ts
backend/: .dockerignore  .env.example  Dockerfile  agent.py  gemini_proxy.py  pyproject.toml  umpire_instructions.md
backend/processors/: __init__.py  ball_tracker.py
src/: App.tsx  index.css
src/components/: LiveHud.tsx  PostMatch.tsx  SetupScreen.tsx
src/config/: runtime.ts
src/hooks/: useAgentConnection.ts  useGeminiLive.ts  useWakeWord.ts
src/lib/: logger.ts
src/store/: matchState.ts
