[project]
name = "spikesense-agent"
version = "0.1.0"
description = "SpikeSense - AI table tennis umpire & commentator using Vision Agents SDK"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
full = [
    "vision-agents[gemini]>=0.3.8",
]

[project.scripts]
agent = "agent:main"
